# Generated by Django 6.0.2 on 2026-02-22 13:58

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='AdminonDuty',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('contact_email', models.EmailField(blank=True, help_text='อีเมลติดต่อ (เช่น admin@example.com)', max_length=254, null=True)),
                ('admin_on_duty', models.CharField(blank=True, help_text='เจ้าหน้าที่ดูแลระบบประจำวัน', max_length=100, null=True)),
                ('contact_phone', models.CharField(blank=True, help_text='เบอร์โทรศัพท์ติดต่อ', max_length=50, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Computer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=20, unique=True, verbose_name='ชื่อเครื่อง')),
                ('status', models.CharField(choices=[('AVAILABLE', 'ว่าง (AVAILABLE)'), ('IN_USE', 'ใช้งาน (IN USE)'), ('RESERVED', 'จองแล้ว (RESERVED)'), ('MAINTENANCE', 'แจ้งซ่อม (MAINT.)')], default='AVAILABLE', max_length=20, verbose_name='สถานะปัจจุบัน')),
                ('last_updated', models.DateTimeField(auto_now=True, verbose_name='อัปเดตสถานะล่าสุด')),
                ('description', models.TextField(blank=True, null=True, verbose_name='รายละเอียดเพิ่มเติม')),
            ],
        ),
        migrations.CreateModel(
            name='Software',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='ชื่อรายการ')),
                ('version', models.CharField(max_length=50, verbose_name='แพ็กเกจ (Package)')),
                ('type', models.CharField(choices=[('Software', 'Software (ทั่วไป)'), ('AI', 'AI Tool (ปัญญาประดิษฐ์)')], default='Software', max_length=20, verbose_name='ประเภท')),
                ('expire_date', models.DateField(blank=True, null=True, verbose_name='วันหมดอายุ License')),
            ],
        ),
        migrations.CreateModel(
            name='UsageLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('user_id', models.CharField(max_length=50)),
                ('user_name', models.CharField(max_length=100)),
                ('user_type', models.CharField(choices=[('student', 'Student'), ('staff', 'Staff'), ('guest', 'Guest')], max_length=20, null=True)),
                ('department', models.CharField(blank=True, max_length=100, null=True)),
                ('user_year', models.CharField(blank=True, max_length=10, null=True)),
                ('computer', models.CharField(blank=True, max_length=20, null=True)),
                ('Software', models.CharField(blank=True, max_length=100, null=True)),
                ('start_time', models.DateTimeField(auto_now_add=True)),
                ('end_time', models.DateTimeField(blank=True, null=True)),
                ('satisfaction_score', models.IntegerField(blank=True, null=True)),
                ('comment', models.TextField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Booking',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('student_id', models.CharField(max_length=20, verbose_name='รหัสนักศึกษา')),
                ('start_time', models.DateTimeField(verbose_name='เวลาเริ่มใช้งาน')),
                ('end_time', models.DateTimeField(verbose_name='เวลาสิ้นสุดการใช้งาน')),
                ('booking_date', models.DateTimeField(default=django.utils.timezone.now, verbose_name='วันที่ทำการจอง')),
                ('status', models.CharField(choices=[('PENDING', 'รออนุมัติ'), ('APPROVED', 'อนุมัติแล้ว'), ('REJECTED', 'ไม่อนุมัติ/ยกเลิก')], default='PENDING', max_length=20, verbose_name='สถานะการจอง')),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now, verbose_name='เวลาที่ทำรายการ')),
                ('computer', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='lab_management.computer', verbose_name='เครื่องคอมพิวเตอร์')),
            ],
        ),
        migrations.CreateModel(
            name='SiteConfig',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('lab_name', models.CharField(default='CKLab', help_text='ชื่อห้องปฏิบัติการที่จะแสดงบนเว็บไซต์', max_length=255)),
                ('booking_enabled', models.BooleanField(default=True, help_text='เปิด/ปิด การใช้งานระบบจอง')),
                ('announcement', models.TextField(blank=True, help_text='ข้อความประกาศ (แสดงบนหน้า Kiosk)', null=True)),
                ('location', models.CharField(blank=True, help_text='สถานที่ตั้ง (เช่น อาคาร 4 ชั้น 2)', max_length=255, null=True)),
                ('is_open', models.BooleanField(default=True, help_text='สถานะการให้บริการห้องแล็บ (เปิด/ปิด)')),
                ('admin_on_duty', models.ForeignKey(blank=True, help_text='เจ้าหน้าที่ดูแลระบบประจำวัน', null=True, on_delete=django.db.models.deletion.SET_NULL, to='lab_management.adminonduty')),
            ],
        ),
        migrations.AddField(
            model_name='computer',
            name='Software',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='lab_management.software', verbose_name='ซอฟต์แวร์ที่ติดตั้ง'),
        ),
    ]
